tests/fixtures/invalid/pow_one_arg.py
# pow() takes 2 or 3 arguments
print(pow(2))
